// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CreateCaseForm Component Snapshots should match snapshot for default state 1`] = `
<div>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
    class="space-y-6 max-w-lg mx-auto bg-white p-8 rounded shadow"
  >
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="title"
      >
        Case Title
      </label>
      <input
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="title"
        name="title"
        placeholder="e.g. Smith v. Jones"
        required=""
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="caseNumber"
      >
        Case Number
      </label>
      <input
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="caseNumber"
        name="caseNumber"
        placeholder="e.g. 2024-CV-12345"
        required=""
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="description"
      >
        Description
      </label>
      <textarea
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="description"
        name="description"
        rows="4"
      />
    </div>
    <div
      class="pt-4"
    >
      <button
        class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50"
        type="submit"
      >
        Create Case
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateCaseForm Component Snapshots should match snapshot for error state 1`] = `
<div>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
    class="space-y-6 max-w-lg mx-auto bg-white p-8 rounded shadow"
  >
    <div
      class="p-4 rounded bg-red-100 text-red-800"
    >
      Failed to create case
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="title"
      >
        Case Title
      </label>
      <input
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="title"
        name="title"
        placeholder="e.g. Smith v. Jones"
        required=""
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="caseNumber"
      >
        Case Number
      </label>
      <input
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="caseNumber"
        name="caseNumber"
        placeholder="e.g. 2024-CV-12345"
        required=""
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="description"
      >
        Description
      </label>
      <textarea
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="description"
        name="description"
        rows="4"
      />
    </div>
    <div
      class="pt-4"
    >
      <button
        class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50"
        type="submit"
      >
        Create Case
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateCaseForm Component Snapshots should match snapshot for pending state 1`] = `
<div>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
    class="space-y-6 max-w-lg mx-auto bg-white p-8 rounded shadow"
  >
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="title"
      >
        Case Title
      </label>
      <input
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="title"
        name="title"
        placeholder="e.g. Smith v. Jones"
        required=""
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="caseNumber"
      >
        Case Number
      </label>
      <input
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="caseNumber"
        name="caseNumber"
        placeholder="e.g. 2024-CV-12345"
        required=""
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="description"
      >
        Description
      </label>
      <textarea
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="description"
        name="description"
        rows="4"
      />
    </div>
    <div
      class="pt-4"
    >
      <button
        class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50"
        disabled=""
        type="submit"
      >
        Creating...
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateCaseForm Component Snapshots should match snapshot for success state 1`] = `
<div>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
    class="space-y-6 max-w-lg mx-auto bg-white p-8 rounded shadow"
  >
    <div
      class="p-4 rounded bg-green-100 text-green-800"
    >
      Case created successfully!
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="title"
      >
        Case Title
      </label>
      <input
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="title"
        name="title"
        placeholder="e.g. Smith v. Jones"
        required=""
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="caseNumber"
      >
        Case Number
      </label>
      <input
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="caseNumber"
        name="caseNumber"
        placeholder="e.g. 2024-CV-12345"
        required=""
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="description"
      >
        Description
      </label>
      <textarea
        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 border p-2 text-black"
        id="description"
        name="description"
        rows="4"
      />
    </div>
    <div
      class="pt-4"
    >
      <button
        class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50"
        type="submit"
      >
        Create Case
      </button>
    </div>
  </form>
</div>
`;
